[package]
name = "OO"
version = "0.1.0"
authors = ["rookie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.11"
bindings = { path = "./bindings" }
futures = "0.3"
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = [".", "bindings"]
