[package]
name = "o_o"
version = "0.1.0"
authors = ["PrivateRookie 996514515@qq.com"]
edition = "2018"
description = "使用Win10自带OCR识别文字"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.11"
bindings = { path = "./bindings" }
futures = "0.3"
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = [".", "bindings"]
